# xobjmap

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
examples/: adcp_convergent_vortices.py  benchmark_backends.py  benchmark_gpu_scaling.py  benchmark_helmholtz_3d.py  benchmark_jax.py  rankine_vortex.py
src/xobjmap/: __init__.py  accessor.py  interp.py
tests/: conftest.py  test_accessor.py  test_helmholtz.py  test_scalar.py  test_scaloa.py  test_streamfunction.py  test_vectoa.py  test_velocity_potential.py
